# pacbio_qc

./: README.rst  environment.yml  pyproject.toml
.github/workflows/: apptainer.yml  main.yml  pypi.yml
sequana_pipelines/pacbio_qc/: __init__.py  config.yaml  main.py  pacbio_qc.rules  schema.yaml  tools.txt
test/: test_main.py
