[tool.poetry]
name = "sequana-pacbio-qc"
version = "1.1.0"
description = "QC on various type of pacbio data"
authors = ["Thomas Cokelaer <thomas.cokelaer@pasteur.fr>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/sequana/"
repository = "https://github.com/sequana/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [{include = "sequana_pipelines"}]

[tool.poetry.dependencies]
python = "^3.8"
sequana = ">=0.12"
sequana-pipetools = ">=0.7.5"
multiqc = "*"
snakemake = ">=7.32"
pulp = ">=2.8"
sequana-wrappers = ">=26.4.1"
rich-click = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
coveralls = "*"

[tool.poetry.scripts]
sequana_pacbio_qc = "sequana_pipelines.pacbio_qc.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--durations=10 --verbose -n 1 --cov sequana_pipelines.pacbio_qc --cov-report term-missing"
